--- a/incl/main/linear_algebra/Matrix_vektor-produkt.tex
+++ b/incl/main/linear_algebra/Matrix_vektor-produkt.tex
@@ -1,6 +1,6 @@
 %Matrixvektorproduct
 \begin{defn}{}{mvp}
-\phantom{gdfs}\\Lad $A$ være en $m$ $x$ $n$ matrix og \textbf{v} være en $n$ $x$ $1$ vektor. \textbf{Matrix-vektor-produktet} af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
+\phantom{gdfs}\\Lad $A$ være en $m\times n$ matrix og \textbf{v} være en $n\times 1$ vektor. \textbf{Matrix-vektor-produktet} af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
 \begin{align*}
 A\textbf{v} =v_1\textbf{a}_1 + v_2\textbf{a}_2 + \cdots + v_n\textbf{a}_n.
 \end{align*}
