Update New Text Document.txt, grafisk_losning.tex, and 10 more files...

--- a/master.tex
+++ b/master.tex
@@ -57,13 +57,37 @@
 	\include{incl/main/indledning/indledning}
 	
 % LINEÆR ALGEBRA 
+	% Matricer og vektorer
 	\include{incl/main/linear_algebra/linear_algebra}
-	\include{incl/main/linear_algebra/lineare_ligningssystemer}
+	% Lineære ligningssystemer
+	\include{incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer}
 	\include{incl/main/linear_algebra/Matrix_vektor-produkt}	
-	\include{incl/main/linear_algebra/loesning_til_lineaer}
+	% Løsning til lineære ligningssystemer
+	\include{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer}
 	\include{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
+	% Lineær uafhængighed
+	\include{incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed}
+	% Span
 	\include{incl/main/linear_algebra/span/span}
 	
+% LINEÆR OPTIMERINGSPROBLEMER 
+	% Generel definition - Optimering 
+	\include{incl/main/linear_optimeringsproblemer/generalt}
+	% Standartform 
+	\include{incl/main/linear_optimeringsproblemer/standardform}
+	% Slack varialbe 
+	\include{incl/main/linear_optimeringsproblemer/slack_variable}
+	% Dualitet 
+	\include{incl/main/linear_optimeringsproblemer/dualitet}
+	
+% GEOMETRISK FREMSTILLING 
+	\include{incl/main/grafisk_losning/grafisk_losning}	
+
+% SIMPLEX METODEN
+	\include{incl/main/simplex_metoden/simplex_metoden}	
+
+% LU - DEKOMPOSITION 
+	\include{incl/main/lu_dekomposition/lu_dekomposition}
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
