--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -37,8 +37,8 @@ $\textbf{c}=
 \begin{bmatrix}
 0 & 0 & 7
 \end{bmatrix}^T
-$ 
-og $c_a=-4$, $c_b=100$ og $c_c=2$. Linearkombinationen af $\textbf{a}$, $\textbf{b}$ og $\textbf{c}$ er 
+$
+, samt $c_a=-4$, $c_b=100$ og $c_c=2$. Linearkombinationen af $\textbf{a}$, $\textbf{b}$ og $\textbf{c}$ er 
 
 $$
 (-4)
@@ -79,10 +79,9 @@ $
 a_1 & a_2 & \ldots & a_n
 \end{bmatrix}^T
 $
-i $\R^n$kan skrives som linearkombination af $I_n$ i $R^n$.
-
-
-Givet skalarerne i en linearkombination er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
+i $\R^n$kan skrives som linearkombination af $I_n$ i $R^n$. 
+Givet to ikke-parallelle vektorer $u$ og $v$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $u$ og $v$. 
+Hvis skalarerne i en linearkombination i stedet er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
 
 \begin{defn}{}{mvp}
 \phantom{gdfs}\\Lad $A$ være en $m \times n$ matrix og \textbf{v} være en $n \times 1$ vektor. \textbf{Matrix-vektor-produktet} af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
