--- a/master.tex
+++ b/master.tex
@@ -60,25 +60,25 @@
 	% Matricer og vektorer
 	\include{incl/main/linear_algebra/linear_algebra}
 	% Lineære ligningssystemer
-	\include{incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer}
-	\include{incl/main/linear_algebra/Matrix_vektor-produkt}	
+	\input{incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer}
+	\input{incl/main/linear_algebra/Matrix_vektor-produkt}	
 	% Løsning til lineære ligningssystemer
-	\include{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer}
-	\include{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
+	\input{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer}
+	\input{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
 	% Lineær uafhængighed
-	\include{incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed}
+	\input{incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed}
 	% Span
-	\include{incl/main/linear_algebra/span/span}
+	\input{incl/main/linear_algebra/span/span}
 	
 % LINEÆR OPTIMERINGSPROBLEMER 
 	% Generel definition - Optimering 
 	\include{incl/main/linear_optimeringsproblemer/generalt}
 	% Standartform 
-	\include{incl/main/linear_optimeringsproblemer/standardform}
+	\input{incl/main/linear_optimeringsproblemer/standardform}
 	% Slack varialbe 
-	\include{incl/main/linear_optimeringsproblemer/slack_variable}
+	\input{incl/main/linear_optimeringsproblemer/slack_variable}
 	% Dualitet 
-	\include{incl/main/linear_optimeringsproblemer/dualitet}
+	\input{incl/main/linear_optimeringsproblemer/dualitet}
 	
 % GEOMETRISK FREMSTILLING 
 	\include{incl/main/grafisk_losning/grafisk_losning}	
