--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -1,15 +1,15 @@
 \subsection{Matrixmultiplikation}
 
 
-\begin{defn}
+\begin{defn}{}{}
 Matrixproduktet af en $m \times n$ matrix $A$ og en $n \times p$ matrix $B$ er en $m \times p$ matrix $C$, 
 
 $$
 C=
 \begin{bmatrix}
 A\textbf{b}_1 & A\textbf{b}_2 & \ldots & A\textbf{b}_p
-\end{bmatrix}
-$$,
+\end{bmatrix}\text{,}
+$$
 
 hvor $A\textbf{b}_j$ er den $j$'te række i $C$.
 \end{defn}
