--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -32,7 +32,7 @@
 {\phantom{.}\newline\textcolor{myblue!25}{\rule{\textwidth}{1pt}}\bigskip}  
 
 \newcounter{proof}[chapter]
-\def\theproof{\thechapter.\arabic{example}}
+\def\theproof{\thechapter.\arabic{proof}}
 \renewenvironment{proof}{\phantom{.}\newline\noindent\refstepcounter{proof}\textbf{Bevis~\theproof}\phantom{.}\newline\noindent}
 {\qed\newline}  
 
